<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3">

    <!-- Barra laterale -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#232196F3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSidebarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="STATO"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Login"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Welcome"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_waiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Waiting"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_ordering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Ordering"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_serving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Serving"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/item_attesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Processing"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_chatBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C92196F3"
            android:padding="10dp"
            android:text="ChatBot"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_farewelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Farewelling"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Signup"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_interview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Interview"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_outofsight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Out Of Sight"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Gone"
            android:typeface="monospace"/>

    </LinearLayout>

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="380dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="Logo"
            android:src="@drawable/pic6chat" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/exitToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/exit"
                android:onClick="ExitChat"
                android:clickable="false"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <ImageButton
                android:id="@+id/userToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/user"
                android:clickable="false"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/textViewLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Utente Loggato"
                android:padding="8dp"
                android:layout_toEndOf="@id/userToggle"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/imageView6"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/textDomanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Domanda"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Risposte -->
            <RadioGroup
                android:id="@+id/answerRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/answerOptionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionA" />

                <RadioButton
                    android:id="@+id/answerOptionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionB" />

                <RadioButton
                    android:id="@+id/answerOptionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionC" />

                <RadioButton
                    android:id="@+id/answerOptionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OptionD" />
            </RadioGroup>

            <!-- Pulsante per confermare la risposta -->

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewOrderStatusMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/button_design_general"
                android:focusable="true"
                android:clickable="true"
                android:cursorVisible="true"
                android:padding="9dp"
                android:text="Conferma Risposta"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/timerProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmButton"
                android:layout_marginTop="15dp"
                android:progress="100"
                android:max="100" />

            <!-- Score display -->
            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timerProgressBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:text="Score: 0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/scoreTextView"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="34sp" />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
