...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcomeBot"
        app:layout_constraintBottom_toTopOf="@id/buttonChecknextState"
        app:srcCompat="@drawable/welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChecknextState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Esci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChecknextState"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />

...
